--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,15 @@
-table tr td , table tr td {
+table tr td,
+table tr td {
     border: 0.05rem solid black;
     padding: 2rem;
-    
+
 
 }
-table{
+
+table {
     border-collapse: collapse;
+}
+
+section {
+    height: 100vh;
 }
